--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Chonky cats are the best kind of cats. Him big because him chonk
-the sad thing is they're too big so the chonks need to lose weight and then they'll feel better.
+Him wish for chomk
+
+i literally wrote a new line jesus christ WORK
